styled home page, and fixed my bookings page alignment

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,3 +26,7 @@
     color:black;
   }
 }
+
+.navbar {
+  background-color:#FFFFFF;
+}
