--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@ body {
   background-repeat: no-repeat;
   background-size: auto;
   background-position: top;
-  background-color: #FEFBFF;
+  background-color:#FFFFFF;
 }
 
 .filter{
