--- a/app/assets/stylesheets/pages/_my_bookings.scss
+++ b/app/assets/stylesheets/pages/_my_bookings.scss
@@ -4,7 +4,7 @@
 
 .centered {
   position: fixed;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: gold;
